--- a/src/main/resources/static/css/admin/adminManager.css
+++ b/src/main/resources/static/css/admin/adminManager.css
@@ -123,11 +123,7 @@ body {
   width: 500px;
 }
 
-.adminName {
-  width: 50px;
-  height: 50px;
-  border-radius: 25px;
-}
+
 
 .content-box {
   display: flex;
@@ -135,9 +131,8 @@ body {
   align-items: stretch;
   gap: 20px;
   width: 100%;
-  min-height: 100vh;
   height: 100%;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 
@@ -204,25 +199,54 @@ body {
   flex-grow: 1;
   display: flex;
   flex-direction: column;
-  gap: 20px;
-  padding: 20px;
+  gap: 9px;
   background-color: #efefef;
   border-radius: 8px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  min-width: 0;
-  max-width: 100%;
-  margin-top: 0px;
-  padding-top: 0px;
+  height: 100%;
+  margin-bottom: 200px;
+  margin-top: -25px;
+  z-index: 10;
+}
+
+.title>h2 {
+  padding-top: 2px;
+}
+
+#sortSelect {
+  width: 90px;
+  border: 1px solid #205375;
+  border-radius: 5px;
+  padding: 5px;
+}
+
+#viewSelect {
+  width: 80px;
+  border: 1px solid #205375;
+  border-radius: 5px;
+  padding: 5px;
+}
+
+.sort-box {
+  display: flex;
+  align-items: center; /* 수직 가운데 정렬 */
+  gap: 10px; /* 각 요소 간 간격 */
+}
+
+#myChart {
+  max-width: 1500px;
+  max-height: 300px;
 }
 
 /* 테이블 */
 .list {
-  width: 1500px;
+  width: 100%;
   height: 400px;
   overflow-y: auto;
   /* 세로 스크롤 활성화 */
   overflow-x: hidden;
   /* 가로 스크롤 비활성화 */
+  position: relative;
+  /* 부모 요소에 relative 추가 */
   padding: 0;
 }
 
@@ -232,20 +256,16 @@ body {
 }
 
 
-
-
 .bookList {
   width: 100%;
   table-layout: fixed;
   border-collapse: collapse;
   border-spacing: 0;
-  margin-top: 20px;
+  margin-top: 10px;
   background-color: #EFEFEF;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
   table-layout: fixed;
-  ;
-
 }
 
 
@@ -253,7 +273,7 @@ body {
   position: sticky;
   top: 0;
   z-index: 10;
-  background-color: #EFEFEF;
+  background-color: #205375;
   color: #fff;
   text-align: center;
   font-size: 14px;
@@ -276,7 +296,7 @@ body {
 
 .bookList td {
   height: 30px;
-  padding: 12px 15px;
+  padding: 0;
   text-align: center;
   font-size: 14px;
   color: rgb(29, 30, 57);
@@ -300,9 +320,10 @@ body {
 
 .bookList button {
   background-color: #205375;
+  height: 19px;
   color: #fff;
   border: none;
-  padding: 8px 12px;
+  padding: 0px 12px;
   border-radius: 4px;
   cursor: pointer;
   font-size: 12px;
@@ -319,7 +340,6 @@ body {
   justify-content: center;
   align-items: center;
   margin-top: 10px;
-  padding: 10px 0;
   background-color: #EFEFEF;
 }
 
@@ -351,7 +371,8 @@ body {
 }
 
 .pagination a.current {
-  background-color: #205375;
+  background-color: rgb(29, 30, 57);
   font-weight: bold;
   cursor: pointer;
+  transform: scale(1.2);
 }
