--- a/src/main/resources/templates/admin/adminManager.html
+++ b/src/main/resources/templates/admin/adminManager.html
@@ -37,58 +37,57 @@
     </div>
 
   </section>
-  <main>
-    <section class="content-box">
-      <div class="sideBar">
-        <h3 class="menu">
-          <i class="fa-solid fa-users"></i>&nbsp;&nbsp;사용자 관련 관리
-          <ul class="submenu">
-            <li><a href="/admin/myPage">&nbsp;&nbsp;&nbsp;-&nbsp;내정보 변경</a></li>
-            <li><a href="/admin">&nbsp;&nbsp;&nbsp;-&nbsp;회원 관리</a></li>
-            <li>
-              <a href="/admin/adminManager" th:if="${session.loginMember.name == '관리자' }">&nbsp;&nbsp;&nbsp;-&nbsp;관리자
-                계정 관리</a>
-            </li>
-          </ul>
-        </h3>
 
-        <h3 class="menu">
-          <i class="fa-solid fa-arrow-trend-up"></i>&nbsp;&nbsp;매출 및 일정 관리
-          <ul class="submenu">
-            <li><a href="/admin/sales">&nbsp;&nbsp;&nbsp;-&nbsp;매출 관리</a></li>
-            <li><a href="/admin/schedule">&nbsp;&nbsp;&nbsp;-&nbsp;일정 관리</a></li>
-          </ul>
-        </h3>
 
-        <h3 class="menu">
-          <i class="fa-solid fa-warehouse"></i>&nbsp;&nbsp;도서 관리
-          <ul class="submenu">
-            <li><a href="/admin/manager">&nbsp;&nbsp;&nbsp;-&nbsp;재고 관리</a></li>
-            <li><a href="/admin/request">&nbsp;&nbsp;&nbsp;-&nbsp;발주 요청</a></li>
-            <li><a href="/admin/newBook">&nbsp;&nbsp;&nbsp;-&nbsp;새 책 등록</a></li>
-          </ul>
-        </h3>
-        <h3 class="menu">
-          <i class="fa-solid fa-question"></i>&nbsp;&nbsp;고객 지원
-          <ul class="submenu">
-            <li><a href="/admin/query">&nbsp;&nbsp;&nbsp;-&nbsp;문의 관리</a></li>
-            <li><a href="/admin/review">&nbsp;&nbsp;&nbsp;-&nbsp;리뷰 관리</a></li>
-            <li><a href="/admin/faq">&nbsp;&nbsp;&nbsp;-&nbsp;FAQ 관리</a></li>
-            <li><a href="/admin/notice">&nbsp;&nbsp;&nbsp;-&nbsp;공지사항 관리</a></li>
-          </ul>
-        </h3>
+  <section class="content-box">
+    <div class="sideBar">
+      <h3 class="menu">
+        <i class="fa-solid fa-users"></i>&nbsp;&nbsp;사용자 관련 관리
+        <ul class="submenu">
+          <li><a href="/admin/myPage">&nbsp;&nbsp;&nbsp;-&nbsp;내정보 변경</a></li>
+          <li><a href="/admin">&nbsp;&nbsp;&nbsp;-&nbsp;회원 관리</a></li>
+          <li>
+            <a href="/admin/adminManager" th:if="${session.loginMember.name == '관리자' }">&nbsp;&nbsp;&nbsp;-&nbsp;관리자 계정
+              관리</a>
+          </li>
+        </ul>
+      </h3>
+
+      <h3 class="menu">
+        <i class="fa-solid fa-arrow-trend-up"></i>&nbsp;&nbsp;매출 및 일정 관리
+        <ul class="submenu">
+          <li><a href="/admin/sales">&nbsp;&nbsp;&nbsp;-&nbsp;매출 관리</a></li>
+          <li><a href="/admin/schedule">&nbsp;&nbsp;&nbsp;-&nbsp;일정 관리</a></li>
+        </ul>
+      </h3>
+
+      <h3 class="menu">
+        <i class="fa-solid fa-warehouse"></i>&nbsp;&nbsp;도서 관리
+        <ul class="submenu">
+          <li><a href="/admin/manager">&nbsp;&nbsp;&nbsp;-&nbsp;재고 관리</a></li>
+          <li><a href="/admin/request">&nbsp;&nbsp;&nbsp;-&nbsp;발주 요청</a></li>
+          <li><a href="/admin/newBook">&nbsp;&nbsp;&nbsp;-&nbsp;발주 요청내역 / 등록</a></li>
+        </ul>
+      </h3>
+      <h3 class="menu">
+        <i class="fa-solid fa-question"></i>&nbsp;&nbsp;고객 지원
+        <ul class="submenu">
+          <li><a href="/admin/query">&nbsp;&nbsp;&nbsp;-&nbsp;문의 관리</a></li>
+          <li><a href="/admin/review">&nbsp;&nbsp;&nbsp;-&nbsp;리뷰 관리</a></li>
+          <li><a href="/admin/faq">&nbsp;&nbsp;&nbsp;-&nbsp;FAQ 관리</a></li>
+          <li><a href="/admin/notice">&nbsp;&nbsp;&nbsp;-&nbsp;공지사항 관리</a></li>
+        </ul>
+      </h3>
+    </div>
+
+    <div class="content">
+      <div class="title">
+        <h2>재고관리</h2>
       </div>
 
 
-      <div class="content">
-        <div class="title">
-          <h1>재고관리
-            <hr>
-          </h1>
-        </div>
-
-        <div class="graph-box">
-          그래프 그리기(출판사별, 책종류별, 저자별, 가격별)
+      <div class="graph-box">
+        <div class="sort-box">
           <label class="sort-dropdown">
             <select id="sortSelect">
               <option value="all">전체</option>
@@ -106,52 +105,53 @@
               <option value="50">50개</option>
             </select>
           </label>
-
-          <div class="graph-section">
-            <canvas id="myChart" width="100px" height="20px"></canvas>
-          </div>
         </div>
 
-        <div class="list">
-          <table class="bookList">
-            <thead>
-              <tr>
-                <th>책 번호</th>
-                <th>책 제목</th>
-                <th>책 저자</th>
-                <th>출판사</th>
-                <th>잔여 수량 / 발주 수량</th>
-                <th>등록일자</th>
-                <th>등록 여부(Y/N)</th>
-                <th>
-                  등록여부 수정
-                </th>
-              </tr>
-            </thead>
-
-            <tbody id="bookList">
-              <tr>
-                <th>1</th>
-                <th>이것이 JAVA!</th>
-                <th>000</th>
-                <th>KH출판사</th>
-                <th>40 / 100</th>
-                <th>2024.11.11</th>
-                <th>N</th>
-                <th>
-                  <button>등록여부 수정</button>
-                </th>
-              </tr>
-
-            </tbody>
-          </table>
+        <div class="graph-section">
+          <canvas id="myChart" width="100px" height="20px"></canvas>
         </div>
-
-        <div class="pagination">페이지네이션</div>
       </div>
-    </section>
 
-    <script src="/js/admin/adminManager.js"></script>
+      <div class="list">
+        <table class="bookList">
+          <thead>
+            <tr>
+              <th>책 번호</th>
+              <th>책 제목</th>
+              <th>책 저자</th>
+              <th>출판사</th>
+              <th>잔여 수량 / 발주 수량</th>
+              <th>등록일자</th>
+              <th>등록 여부(Y/N)</th>
+              <th>
+                등록여부 수정
+              </th>
+            </tr>
+          </thead>
+
+          <tbody id="bookList">
+            <tr>
+              <td>1</td>
+              <td>이것이 JAVA!</td>
+              <td>000</td>
+              <td>KH출판사</td>
+              <td>40 / 100</td>
+              <td>2024.11.11</td>
+              <td>N</td>
+              <th>
+                <button>등록여부 수정</button>
+              </th>
+            </tr>
+
+          </tbody>
+        </table>
+      </div>
+
+      <div class="pagination">페이지네이션</div>
+    </div>
+  </section>
+
+  <script src="/js/admin/adminManager.js"></script>
 </body>
 
 </html>
