--- a/src/main/resources/templates/admin/adminRequest.html
+++ b/src/main/resources/templates/admin/adminRequest.html
@@ -1,108 +1,109 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>발주요청</title>
+  <title>발주요청내역 / 등록 | PhantomBooks</title>
   <script src="https://kit.fontawesome.com/913e662347.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="/css/admin/adminRequest.css">
 </head>
+
 <body>
   <section class="header">
     <div class="logo">
       <a href="/admin">
-          <img src="/images/고스트 코딩왕.png" alt="Logo">
+        <img src="/images/고스트 코딩왕.png" alt="Logo">
       </a>
-      
     </div>
-  
-    <div class="function">
 
-      
+    <div class="function">
       <!-- 관리자 담당 업무 -->
       <div class="adminName">
-        <div th:if= "${session.loginMember}"
-             th:text="${session.loginMember.adminName}">
+        <div th:if="${session.loginMember}" th:text="${session.loginMember.adminName}">
           담당
         </div>
       </div>
-  
+
       <!-- 채팅방 입장 아이콘 -->
       <div class="chatting">
         <button class="fa-solid fa-paper-plane" id="chatting">
           <a href="/admin/chatting"></a>
         </button>
       </div>
-     </div>
+    </div>
 
   </section>
-  <main>
-    <section class="content-box">
-      <div class="sideBar">
-        <h3 class="menu">
-          <i class="fa-solid fa-users"></i>&nbsp;&nbsp;사용자 관련 관리
-          <ul class="submenu">
-            <li><a href="/admin/myPage">&nbsp;&nbsp;&nbsp;-&nbsp;내정보 변경</a></li>
-            <li><a href="/admin">&nbsp;&nbsp;&nbsp;-&nbsp;회원 관리</a></li>
-            <li>
-              <a href="/admin/adminManager" 
-                th:if= "${session.loginMember.name == '관리자' }">&nbsp;&nbsp;&nbsp;-&nbsp;관리자 계정 관리</a>
-            </li>
-          </ul>
-        </h3>
-      
-        <h3 class="menu">
-          <i class="fa-solid fa-arrow-trend-up"></i>&nbsp;&nbsp;매출 및 일정 관리
-          <ul class="submenu">
-            <li><a href="/admin/sales">&nbsp;&nbsp;&nbsp;-&nbsp;매출 관리</a></li>
-            <li><a href="/admin/schedule">&nbsp;&nbsp;&nbsp;-&nbsp;일정 관리</a></li>
-          </ul>
-        </h3>
-        
-        <h3 class="menu">
-          <i class="fa-solid fa-warehouse"></i>&nbsp;&nbsp;도서 관리
-          <ul class="submenu">
-            <li><a href="/admin/manager">&nbsp;&nbsp;&nbsp;-&nbsp;재고 관리</a></li>
-            <li><a href="/admin/request">&nbsp;&nbsp;&nbsp;-&nbsp;발주 요청</a></li>
-            <li><a href="/admin/newBook">&nbsp;&nbsp;&nbsp;-&nbsp;발주 요청내역</a></li>
-          </ul>
-        </h3>
-        <h3 class="menu">
-          <i class="fa-solid fa-question"></i>&nbsp;&nbsp;고객 지원
-          <ul class="submenu">
-            <li><a href="/admin/query">&nbsp;&nbsp;&nbsp;-&nbsp;문의 관리</a></li>
-            <li><a href="/admin/review">&nbsp;&nbsp;&nbsp;-&nbsp;리뷰 관리</a></li>
-            <li><a href="/admin/faq">&nbsp;&nbsp;&nbsp;-&nbsp;FAQ 관리</a></li>
-            <li><a href="/admin/notice">&nbsp;&nbsp;&nbsp;-&nbsp;공지사항 관리</a></li>
-          </ul>
-        </h3>
-      </div>
-     
-  
+
+
+  <section class="content-box">
+    <div class="sideBar">
+      <h3 class="menu">
+        <i class="fa-solid fa-users"></i>&nbsp;&nbsp;사용자 관련 관리
+        <ul class="submenu">
+          <li><a href="/admin/myPage">&nbsp;&nbsp;&nbsp;-&nbsp;내정보 변경</a></li>
+          <li><a href="/admin">&nbsp;&nbsp;&nbsp;-&nbsp;회원 관리</a></li>
+          <li>
+            <a href="/admin/adminManager" th:if="${session.loginMember.name == '관리자' }">&nbsp;&nbsp;&nbsp;-&nbsp;관리자 계정
+              관리</a>
+          </li>
+        </ul>
+      </h3>
+
+      <h3 class="menu">
+        <i class="fa-solid fa-arrow-trend-up"></i>&nbsp;&nbsp;매출 및 일정 관리
+        <ul class="submenu">
+          <li><a href="/admin/sales">&nbsp;&nbsp;&nbsp;-&nbsp;매출 관리</a></li>
+          <li><a href="/admin/schedule">&nbsp;&nbsp;&nbsp;-&nbsp;일정 관리</a></li>
+        </ul>
+      </h3>
+
+      <h3 class="menu">
+        <i class="fa-solid fa-warehouse"></i>&nbsp;&nbsp;도서 관리
+        <ul class="submenu">
+          <li><a href="/admin/manager">&nbsp;&nbsp;&nbsp;-&nbsp;재고 관리</a></li>
+          <li><a href="/admin/request">&nbsp;&nbsp;&nbsp;-&nbsp;발주 요청</a></li>
+          <li><a href="/admin/newBook">&nbsp;&nbsp;&nbsp;-&nbsp;발주 요청내역 / 등록</a></li>
+        </ul>
+      </h3>
+      <h3 class="menu">
+        <i class="fa-solid fa-question"></i>&nbsp;&nbsp;고객 지원
+        <ul class="submenu">
+          <li><a href="/admin/query">&nbsp;&nbsp;&nbsp;-&nbsp;문의 관리</a></li>
+          <li><a href="/admin/review">&nbsp;&nbsp;&nbsp;-&nbsp;리뷰 관리</a></li>
+          <li><a href="/admin/faq">&nbsp;&nbsp;&nbsp;-&nbsp;FAQ 관리</a></li>
+          <li><a href="/admin/notice">&nbsp;&nbsp;&nbsp;-&nbsp;공지사항 관리</a></li>
+        </ul>
+      </h3>
+    </div>
+
     <div class="content">
       <div class="title">
-        <h1>발주 요청</h1><hr>
+        <h2>재고관리</h2>
       </div>
-  
+
       <div class="graph-box">
-        정렬 기준
-        <label class="sort-dropdown">
-          <select id="sortSelect" >
+        <div class="sort-box">
+          <label class="sort-dropdown">
+            <select id="sortSelect">
               <option value="all">전체</option>
               <option value="company">출판사</option>
               <option value="title">책 제목별</option>
-          </select>
-        </label>
-        <div>
-          <input type="text" id="searchText" class= "hidden">
-        </div>
-        <label class="view-dropdown">
-          <select id="viewSelect">
+            </select>
+          </label>
+          <div>
+            <input type="text" id="searchText" class="hidden">
+          </div>
+          <label class="view-dropdown">
+            <select id="viewSelect">
               <option value="10">10개</option>
               <option value="20">20개</option>
               <option value="50">50개</option>
-          </select>
-        </label>
+            </select>
+          </label>
+        </div>
+
+
         <div class="list">
           <table class="bookList">
             <thead>
@@ -113,7 +114,7 @@
                 <th>잔여 수량</th>
               </tr>
             </thead>
-  
+
             <tbody id="bookList">
               <tr>
                 <th>1</th>
@@ -152,7 +153,7 @@
 
         </table>
       </div>
-      
+
       <button id="newRequestBtn">신간 발주 요청</button>
 
       <div id="newBook" class="hidden popup-layer-close">
@@ -212,10 +213,11 @@
     </div>
 
 
-    
+
   </section>
 
 
   <script src="/js/admin/adminRequest.js"></script>
 </body>
+
 </html>
